# barracuda-thrusters

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  start_thruster  stop_thruster
.github/workflows/: docker-publish.yml
catkin_ws/src/barracuda_thruster_output_controller/: CMakeLists.txt  package.xml
catkin_ws/src/barracuda_thruster_output_controller/data/: t200_18v_data.csv
catkin_ws/src/barracuda_thruster_output_controller/launch/: thruster_controller.launch  thruster_controller_test.launch  thruster_controller_with_kill_switch_test.launch
catkin_ws/src/barracuda_thruster_output_controller/scripts/: F2PWM.py  disable_thruster_node.py  gpio.py  keyboard_test_publisher.py  rpi_thruster_controller.py  test_kill_switch.py  test_publisher.py  thruster_control_node.py  thruster_data_handler.py
catkin_ws/src/barracuda_thruster_output_controller/srv/: DisableMotors.srv  SetThruster.srv
catkin_ws/src/uuv_gazebo_ros_plugins_msgs/: CMakeLists.txt
dev_ws/: stop_thruster
dev_ws/src/barracuda_thrusters/: package.xml  setup.py
dev_ws/src/barracuda_thrusters/barracuda_thrusters/: barracuda_thruster_control_direct.py  barracuda_thrusters.py  barracuda_thurster_control_direct.py  f2pwm.py  serial.py  serial_sender.py  stop_thrusters_service.py  teensy.py  test_publisher.py  test_thrusters.py  test_thrusters_service.py  thruster_controller.py
dev_ws/src/barracuda_thrusters/launch/: barracuda_thrusters_launch.py  test_thrusters_launch.py
dev_ws/src/barracuda_thrusters_interfaces/: CMakeLists.txt  package.xml
(+2 files in other folders)
